Fix spacing on logo

--- a/assets/styleguide/styleguide.css
+++ b/assets/styleguide/styleguide.css
@@ -278,7 +278,7 @@ a {
     max-width: 1400px; }
 
 .logo__wrapper {
-  margin: 0; }
+  margin: 10px 0; }
 
 .logo__image {
   height: auto;
