--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -32,7 +32,7 @@
 
 .logo {
   &__wrapper {
-    margin: 0;
+    margin: 10px 0;
   }
 
   &__image {
